force-app/main/default/objects/Affectation__c/Affectation__c.object-meta.xml
<CustomObject>
    <label>Affectation</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affectations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>