force-app/main/default/objects/Affectation__c/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Categories</valueSetName>
    </valueSet>
</CustomField>