force-app/main/default/objects/Affectation__c/fields/Praticien__c.field-meta.xml
<CustomField>
    <fullName>Praticien__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Praticien</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affectations</relationshipLabel>
    <relationshipName>Affectations</relationshipName>
    <type>Lookup</type>
</CustomField>