force-app/main/default/objects/Affectation__c/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <externalId>true</externalId>
    <label>UniqueID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>