force-app/main/default/objects/Affectation__c/fields/Usine__c.field-meta.xml
<CustomField>
    <fullName>Usine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usine</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affectations</relationshipLabel>
    <relationshipName>Affectations</relationshipName>
    <type>Lookup</type>
</CustomField>