force-app/main/default/objects/Affectation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Categorie__c</columns>
    <columns>Praticien__c</columns>
    <columns>Usine__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>